vlib/v/checker/tests/immutable_var.out
vlib/v/checker/tests/immutable_var.vv:3:2: error: `a` is immutable, declare it with `mut` to make it mutable
    1 | fn main() {
    2 |     a := 1
    3 |     a = 2
      |     ^
    4 |     _ = a
    5 | }
